JJ/logs/ppo-${GROWTH}_${LR}_863888.out
==========================================
SLURM_JOB_ID = 863888
SLURM_JOB_NODELIST = b04-13
TMPDIR = /tmp/SLURM_863888
==========================================
Run 'mamba init' to be able to run mamba activate/deactivate
and start a new shell session. Or use conda to activate/deactivate.

  File "/home1/jiajinzh/Dynamic-tendon-Leg/JJ/train.py", line 27
    seed_start=args.seed_start,
    ^
SyntaxError: invalid syntax
